# formula-e-race-control-observer

./: .gitignore  BONUS.md  DEMO.md  FILE_INDEX.md  HOW_IT_WORKS.md  PLAN.md  README.md  RUN_OF_SHOW.md  SMOKE_TEST.md  STUDENT_GUIDE.md  activate.sh  pyproject.toml  requirements.txt
correlator/: Dockerfile  fusion.py  prompts.py  reporter.py  requirements.txt  service.py
deploy/: deploy_app.sh  deploy_console.sh  deploy_correlator.sh  deploy_state_writer.sh  deploy_telemetry_observer.sh  enable_apis.sh  provision_vertex_agent.sh  setup_firestore.sh  stage_mosaics.sh  verify_app.sh  verify_app_checks.py
docs/: DEPLOYMENT.md  HACK_DESIGN.md
frontend/: Dockerfile  main.py  requirements.txt
notebooks/: camera_groups.example.json  fe_video_lab.ipynb  verify_camera_mapping.ipynb
observers/: Dockerfile  requirements.txt
prelab/: RUNBOOK.md  build_camera_mosaics.py  build_frames.py  camera_order.txt  normalize_cameras.py  probe_camera_labels.sh
scripts/: CATALOGUE.md  catalogue_all.sh  catalogue_correlate.py  catalogue_telemetry.py  catalogue_video.py  probe_correlator.py  probe_telemetry.py
setup/: 1_enable_apis.sh  2_provision_vertex_agent.sh  2_setup_firestore.sh  3_deploy_state_writer.sh  3_setup_firestore.sh  4_deploy_simulator.sh  4_stage_mosaics.sh  5_deploy_state_writer.sh  5_stage_mosaics.sh  6_deploy_simulator.sh  7_deploy_telemetry_observer.sh  8_deploy_console.sh  all.sh  print_colab_link.sh  verify.sh  verify_checks.py
shared/: clock.py  gemini.py  heartbeat.py  lifecycle.py  models.py  observation_bus.py  verifier_pkg.py
simulator/: Dockerfile  (+2 more)
(+24 files in other folders)
